# rust-api

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20260515073901_create_user_table.up.sql  20260518104207_add_enums_in_users.down.sql  20260518104207_add_enums_in_users.up.sql
src/: handler.rs  main.rs  models.rs  route.rs  schema.rs
src/config/: mod.rs
src/errors/: api_error.rs
src/extractors/: authorization.rs
src/helpers/: jwt.rs
src/middleware/: auth.rs
src/route/: api.rs  mod.rs
src/route/v1/: auth.rs  mod.rs  users.rs
