[package]
name = "auth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "uuid" ] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
jsonwebtoken = "=7.2"
bcrypt = "0.19.1"
tracing = "0.1.44"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util", "timeout", "compression-gzip", "limit"] }
